# serializer version: 1
# name: test_snapshot[device_names0]
  dict({
    'control': dict({
      'bowls': dict({
        'settings': list([
          dict({
            'food_type': <FoodType.WET: 1>,
            'target': 0.0,
          }),
          dict({
            'food_type': <FoodType.DRY: 2>,
            'target': 0.0,
          }),
        ]),
        'type': <BowlType.TWO_SMALL: 4>,
      }),
      'fast_polling': False,
      'lid': dict({
        'close_delay': <CloseDelay.FASTER: 0>,
      }),
      'tags': list([
        dict({
          'created_at': datetime.datetime(2023, 10, 1, 14, 34, 49, tzinfo=TzInfo(0)),
          'device_id': 269654,
          'id': 60978,
          'index': 1,
          'profile': 2,
          'updated_at': datetime.datetime(2023, 10, 1, 14, 34, 49, tzinfo=TzInfo(0)),
          'version': 0,
        }),
      ]),
      'tare': <Tare.RESET_RIGHT: 2>,
      'training_mode': <FeederTrainingMode.DISABLED: 0>,
    }),
    'entity_info': dict({
      'household_id': 7777,
      'id': 269654,
      'name': 'Maui matlåda (old) ',
      'parent_device_id': None,
      'photo': None,
      'product_id': 4,
      'tag': None,
      'tag_id': None,
    }),
    'properties': dict({
      'available': True,
      'battery_level': 15,
      'household_id': 7777,
      'id': 269654,
      'name': 'Maui matlåda (old) ',
      'parent_device_id': None,
      'photo': 'https://www.surepetcare.io/assets/assets/products/feeder.7ff330c9e368df01d256156b6fc797bb.png',
      'product': <ProductId.FEEDER_CONNECT: 4>,
      'product_id': 4,
      'product_name': 'FEEDER_CONNECT',
      'rssi': -79,
    }),
    'status': dict({
      'battery': 5.046,
      'bowl_status': list([
        dict({
          'current_weight': 32.16,
          'fill_percent': 100,
          'food_type': <FoodType.WET: 1>,
          'last_fill_weight': 32.16,
          'last_filled_at': datetime.datetime(2025, 7, 7, 10, 29, 29, tzinfo=TzInfo(0)),
          'last_zeroed_at': datetime.datetime(2025, 5, 23, 10, 25, 29, tzinfo=TzInfo(0)),
          'position': <BowlPosition.ONE: 0>,
          'substance_type': <SubstanceType.FOOD: 2>,
        }),
        dict({
          'current_weight': -27.2,
          'fill_percent': None,
          'food_type': <FoodType.WET: 1>,
          'last_fill_weight': -27.2,
          'last_filled_at': datetime.datetime(2025, 7, 7, 10, 29, 29, tzinfo=TzInfo(0)),
          'last_zeroed_at': datetime.datetime(2025, 5, 23, 10, 25, 29, tzinfo=TzInfo(0)),
          'position': <BowlPosition.TWO: 1>,
          'substance_type': <SubstanceType.FOOD: 2>,
        }),
      ]),
      'bowl_type_options': 'TWO_SMALL_WET_DRY',
      'fill_percentages': dict({
        'per_bowl': dict({
          0: None,
          1: None,
        }),
        'total': None,
      }),
      'learn_mode': False,
      'online': True,
      'signal': dict({
        'device_rssi': -79,
      }),
      'tare_options': list([
        'reset_left',
        'reset_right',
        'reset_both',
      ]),
      'version': dict({
        'device': dict({
          'firmware': '406.437',
          'hardware': '9',
        }),
      }),
    }),
    'timezone': 'Europe/Stockholm',
  })
# ---
# name: test_snapshot[device_names0].1
  dict({
    'control': dict({
      'bowls': dict({
        'settings': list([
          dict({
            'food_type': <FoodType.DRY: 2>,
            'target': 65.5,
          }),
        ]),
        'type': <BowlType.LARGE: 1>,
      }),
      'fast_polling': True,
      'lid': dict({
        'close_delay': <CloseDelay.FASTER: 0>,
      }),
      'tags': list([
        dict({
          'created_at': datetime.datetime(2025, 8, 20, 16, 3, 55, tzinfo=TzInfo(0)),
          'device_id': 1187564,
          'id': 1725064,
          'index': 1,
          'profile': 2,
          'updated_at': datetime.datetime(2025, 8, 20, 16, 3, 55, tzinfo=TzInfo(0)),
          'version': 1,
        }),
      ]),
      'tare': None,
      'training_mode': <FeederTrainingMode.DISABLED: 0>,
    }),
    'entity_info': dict({
      'household_id': 7777,
      'id': 1187564,
      'name': 'Maurice Futter',
      'parent_device_id': None,
      'photo': None,
      'product_id': 4,
      'tag': None,
      'tag_id': None,
    }),
    'properties': dict({
      'available': True,
      'battery_level': 81,
      'household_id': 7777,
      'id': 1187564,
      'name': 'Maurice Futter',
      'parent_device_id': None,
      'photo': 'https://www.surepetcare.io/assets/assets/products/feeder.7ff330c9e368df01d256156b6fc797bb.png',
      'product': <ProductId.FEEDER_CONNECT: 4>,
      'product_id': 4,
      'product_name': 'FEEDER_CONNECT',
      'rssi': -64,
    }),
    'status': dict({
      'battery': 6.11,
      'bowl_status': list([
        dict({
          'current_weight': -40.34,
          'fill_percent': None,
          'food_type': <FoodType.DRY: 2>,
          'last_fill_weight': -22.73,
          'last_filled_at': datetime.datetime(2025, 9, 11, 7, 29, 36, tzinfo=TzInfo(0)),
          'last_zeroed_at': datetime.datetime(2025, 8, 20, 16, 4, 37, tzinfo=TzInfo(0)),
          'position': <BowlPosition.BOTH: 2>,
          'substance_type': <SubstanceType.FOOD: 2>,
        }),
      ]),
      'bowl_type_options': 'LARGE_DRY',
      'fill_percentages': dict({
        'per_bowl': dict({
          0: -61.587786259541986,
        }),
        'total': -61.587786259541986,
      }),
      'learn_mode': False,
      'online': True,
      'signal': dict({
        'device_rssi': -64,
      }),
      'tare_options': list([
        'reset_large',
      ]),
      'version': dict({
        'device': dict({
          'firmware': '406.437',
          'hardware': '12',
        }),
      }),
    }),
    'timezone': 'Europe/Stockholm',
  })
# ---
# name: test_snapshot_get_functions[device_names0]
  dict({
    'fill_percentages': dict({
      'per_bowl': dict({
        0: None,
        1: None,
      }),
      'total': None,
    }),
    'get_bowl_type_option': 'TWO_SMALL_WET_DRY',
  })
# ---
# name: test_snapshot_get_functions[device_names0].1
  dict({
    'fill_percentages': dict({
      'per_bowl': dict({
        0: -61.587786259541986,
      }),
      'total': -61.587786259541986,
    }),
    'get_bowl_type_option': 'LARGE_DRY',
  })
# ---
# name: test_snapshot_set_bowls_command[device_names0]
  dict({
    'control': dict({
      'bowls': dict({
        'settings': list([
          dict({
            'food_type': <FoodType.WET: 1>,
            'target': 50.0,
          }),
          dict({
            'food_type': <FoodType.WET: 1>,
            'target': 100.0,
          }),
        ]),
        'type': <BowlType.TWO_SMALL: 4>,
      }),
      'fast_polling': False,
      'lid': dict({
        'close_delay': <CloseDelay.SLOWER: 20>,
      }),
      'tags': None,
      'tare': None,
      'training_mode': <FeederTrainingMode.STEP_1: 1>,
    }),
    'entity_info': dict({
      'household_id': 7777,
      'id': 269654,
      'name': 'Maui matlåda (old) ',
      'parent_device_id': None,
      'photo': None,
      'product_id': 4,
      'tag': None,
      'tag_id': None,
    }),
    'properties': dict({
      'available': None,
      'battery_level': 0,
      'household_id': 7777,
      'id': 269654,
      'name': 'Maui matlåda (old) ',
      'parent_device_id': None,
      'photo': 'https://www.surepetcare.io/assets/assets/products/feeder.7ff330c9e368df01d256156b6fc797bb.png',
      'product': <ProductId.FEEDER_CONNECT: 4>,
      'product_id': 4,
      'product_name': 'FEEDER_CONNECT',
      'rssi': None,
    }),
    'status': dict({
      'battery': None,
      'bowl_status': None,
      'bowl_type_options': None,
      'fill_percentages': None,
      'learn_mode': None,
      'online': None,
      'signal': None,
      'tare_options': None,
      'version': None,
    }),
    'timezone': 'Europe/Stockholm',
  })
# ---
# name: test_snapshot_set_bowls_command[device_names0].1
  dict({
    'control': dict({
      'bowls': dict({
        'settings': list([
          dict({
            'food_type': <FoodType.WET: 1>,
            'target': 50.0,
          }),
          dict({
            'food_type': <FoodType.WET: 1>,
            'target': 100.0,
          }),
        ]),
        'type': <BowlType.TWO_SMALL: 4>,
      }),
      'fast_polling': False,
      'lid': dict({
        'close_delay': <CloseDelay.SLOWER: 20>,
      }),
      'tags': None,
      'tare': None,
      'training_mode': <FeederTrainingMode.STEP_1: 1>,
    }),
    'entity_info': dict({
      'household_id': 7777,
      'id': 1187564,
      'name': 'Maurice Futter',
      'parent_device_id': None,
      'photo': None,
      'product_id': 4,
      'tag': None,
      'tag_id': None,
    }),
    'properties': dict({
      'available': None,
      'battery_level': 0,
      'household_id': 7777,
      'id': 1187564,
      'name': 'Maurice Futter',
      'parent_device_id': None,
      'photo': 'https://www.surepetcare.io/assets/assets/products/feeder.7ff330c9e368df01d256156b6fc797bb.png',
      'product': <ProductId.FEEDER_CONNECT: 4>,
      'product_id': 4,
      'product_name': 'FEEDER_CONNECT',
      'rssi': None,
    }),
    'status': dict({
      'battery': None,
      'bowl_status': None,
      'bowl_type_options': None,
      'fill_percentages': None,
      'learn_mode': None,
      'online': None,
      'signal': None,
      'tare_options': None,
      'version': None,
    }),
    'timezone': 'Europe/Stockholm',
  })
# ---
